--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.18.1",
     "fast-two-sms": "^3.0.0",
     "mongodb": "^4.5.0",
